changes on yml - added main to pul request and push

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -4,8 +4,14 @@ on:
   push:
     branches:
       - 'master'
+      - 'main'
     tags:
       - 'v*'
+  pull_request:
+    branches:
+      - 'master'
+      -  'main'
+
 
 jobs:
   runtest:
