--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -61,6 +61,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "kwilliam-prod" #Must be unique in Heroku
-          heroku_email: "keith@webizly.com"
+          heroku_app_name: "docker-flask-calculator" #Must be unique in Heroku
+          heroku_email: "laydatrkmn6@gmail.com"
           usedocker: true
